# hashtable-benchmarks

./: .bazelrc  BUILD.bazel  BUILD.double_conversion  BUILD.folly  BUILD.skarupke  BUILD.sparsehash  README.md  WORKSPACE  build_info.cc  build_info.h  dynamic_rehash_effect.cc  hashtable_benchmarks.cc  hashtable_benchmarks.ipynb  hashtable_memory.ipynb
results/: bytell_max_lf.txt  ngbronson-2018-07-30.json  ngbronson-2018-08-03.json  ngbronson-2018-09-29.json  ngbronson-2018-10-02.json  sonmi-2018-07-19.json  sonmi-2021-05-02.json
tools/: bazel.rc  workspace_status.sh
