# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "sparsehash_config",
    hdrs = ["sparseconfig.h"],
    include_prefix = "sparsehash/internal",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "build_info",
    hdrs = ["build_info.h"],
    linkstamp = "build_info.cc",
)

cc_binary(
    name = "hashtable_benchmarks",
    srcs = ["hashtable_benchmarks.cc"],
    copts = ["-Wno-deprecated"],
    deps = [
        ":build_info",
        "@absl//absl/strings",
        "@absl//absl/strings:str_format",
        "@absl//absl/container:flat_hash_set",
        "@absl//absl/container:node_hash_set",
        "@boost//:preprocessor",
        "@facebook_folly//:folly",
        "@gbench//:benchmark_main",
        "@google_sparsehash//:sparsehash",
        "@skarupke//:skarupke",
    ],
    stamp = True,
)

cc_binary(
    name = "dynamic_rehash_effect",
    srcs = ["dynamic_rehash_effect.cc"],
    deps = [
        "@skarupke//:skarupke",
    ],
)
